--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,15 @@
   "author": "Yokke",
   "license": "ISC",
   "devDependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.18"
   },
   "dependencies": {
     "mariadb": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.21.2"
   }
 }
